<resources>
    <string name="app_name">LAB5-TP-ANDROID-BUFFET</string>

    <!-- Toast -->
    <string name="registroUsuarioOk">Usuario Registrado! Ya puede acceder con sus credenciales.</string>
    <string name="registroUsuarioError">ERROR: Ya existe un usuario con ese email o DNI.</string>
    <string name="pedidoEnviado">Su pedido fue enviado con éxito!</string>
    <string name="pedidoVacio">NO SE PUEDE ENVIAR UN PEDIDO VACIO :(</string>
    <string name="problemaConexion">Problema al conectar con el servidor. Chequee su conexión y vuelva a intentarlo.</string>
    <string name="problemaEnvioPedido">Problema al enviar pedido. Intentelo nuevamente.</string>

    <!-- Validaciones-->
    <string name="campoVacio">Campo vacío!</string>
    <string name="emailInvalido">Email inválido!</string>
    <string name="dniInvalido">DNI inválido!</string>
    <string name="emailClaveIncorrecto">Email o clave incorrectos!</string>
    <string name="usuarioExiste">Error: Ya existe un usuario con ese email o DNI</string>
    <string name="clavesDistintas">Error: Las claves no coinciden</string>

    <!-- LOGIN LAYOUT: ES-->
    <string name="tvTituloLogin">Login de Usuario</string>
    <string name="tvSubTituloLogin">Bienvenido a la primera aplicación\n Buffet-UTN</string>
    <string name="tvEmail">Email:</string>
    <string name="etEmail">Ingrese su email</string>
    <string name="tvClave">Clave:</string>
    <string name="etClave">Ingrese su clave</string>
    <string name="chkRecordarme">Recordar credenciales</string>
    <string name="btnIngresar">INGRESAR</string>
    <string name="btnRegistrarme">REGISTRARME</string>

    <!-- REGISTRO LAYOUT ES: -->
    <string name="tvTituloRegistro">Registro de Usuario</string>
    <string name="tvSubTituloRegistro">Esta es la pantalla de registro.\n Por favor ingrese datos verdaderos.</string>
    <string name="tvNombre">Nombre:</string>
    <string name="etNombre">Ingrese su nombre</string>
    <string name="tvApellido">Apellido:</string>
    <string name="etApellido">Ingrese su apellido</string>
    <string name="tvDNI">DNI:</string>
    <string name="etDNI">Ingrese su DNI</string>
    <string name="tvReingreseClave">Reingrese:</string>
    <string name="etReingreseClave">Reingrese su clave</string>

    <!-- MENU LAYOUT ES: -->
    <string name="tvImporteTotalTexto">PRECIO TOTAL: $</string>
    <string name="tvCantidadElementosTexto">Elementos seleccionados: </string>
    <string name="btnVerPedido">enviar pedido</string>

    <!-- Item_Producto-->
    <string name="tvPrecioProductoTexto">Precio: $</string>

    <!-- MI PEDIDO LAYOUT ES: -->
    <string name="btnConfirmarPedido">confirmar</string>

    <!-- MENU SUPERIOR -->
    <string name="btnMenuDesloguearse">Desloguearse</string>
    <string name="btnVerPedidoActual">Ver pedido actual</string>

    <!-- MI PEDIDO SUPERIOR -->
    <string name="btnConfirmarPedidoActual">Confirmar pedido actual</string>
    <string name="btnLimpiarPedido">Limpiar pedido</string>

</resources>
