<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.a55.lab5_tp_android_buffet.Activities.Menu.MenuActivity">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-1dp">

            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!--tvImporteTotalTexto-->
                        <TextView
                            android:id="@+id/tvImporteTotalTexto"
                            android:name="tvImporteTotalTexto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/tvImporteTotalTexto"
                            android:textSize="20dp" />

                        <!--tvImporteTotalNumero-->
                        <TextView
                            android:id="@+id/tvImporteTotalNumero"
                            android:name="tvImporteTotalNumero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:gravity="left"
                            android:text="0.00"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!--tvCantidadElementosTexto-->
                        <TextView
                            android:id="@+id/tvCantidadElementosTexto"
                            android:name="tvCantidadElementosTexto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/tvCantidadElementosTexto"
                            android:textSize="14dp" />

                        <!--tvCantidadElementosNumero-->
                        <TextView
                            android:id="@+id/tvCantidadElementosNumero"
                            android:name="tvCantidadElementosNumero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="left"
                            android:text="10"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--fabVerPedido FAB-->
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabConfirmarPedido"
                        android:name="btnConfirmarPedido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="16dp"
                        android:src="@mipmap/ic_shop_white_24dp"
                        android:text="@string/btnVerPedido"
                        android:textColor="#fff"
                        android:textSize="8dp"
                        app:backgroundTint="@color/colorPrimary" />

                    <!--btnVerPedido-->
                    <!--<Button
                            android:id="@+id/btnConfirmarPedido"
                            android:name="btnConfirmarPedido"
                            android:text="@string/btnConfirmarPedido"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="right"
                            android:background="@color/colorPrimary"
                            android:drawableTop="@mipmap/ic_shopping_cart_white_24dp"
                            android:gravity="center"
                            android:padding="6dp"
                            android:textColor="#fff"
                            android:textSize="8dp" />-->
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RecyclerListaProductosPedidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>